js/js.translator/testData/incremental/invalidation/privateDeclarationLeakThroughDefaultParamWithIntraModuleInliner/main/f.6.kt
private inline fun prop() = "6"

internal inline fun foo(lambda: () -> String = ::prop): String {
    return lambda()
}
